welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: ')' expected but '=' found.
if(litMessage(): String=A)
                       ^BDRBuggle:4: error: illegal start of simple expression
	}
        ^